rename folder back to resources

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" type="image/png" href="favicon.ico">
 	<link href="styles.css" rel="stylesheet"/>
 	<!-- <link rel="stylesheet" href="ext-6.2.0.beta/build/classic/theme-triton/resources/theme-triton-all.css"/> -->
-	<link rel="stylesheet" href="senchacss/Ext620757-all.css"/>
+	<link rel="stylesheet" href="resources/Ext620757-all.css"/>
 	<link rel="stylesheet" href="ext-6.2.0.beta/packages/pivot/build/classic/triton/resources/pivot-all.css"/>
 	<link rel="stylesheet" href="ext-6.2.0.beta/packages/calendar/build/classic/triton/resources/calendar-all.css"/>
 
