--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="ext-6.2.0.beta/packages/pivot/build/classic/pivot.js"></script>
 	<script src="ext-6.2.0.beta/build/packages/charts/classic/charts-debug.js"></script>
 	<script src="ext-6.2.0.beta/packages/calendar/build/classic/calendar.js"></script>
+	<script src="ext-6.2.0.beta/build/packages/d3/classic/d3-debug.js"></script>
 	
 	<script src="node_modules/core-js/client/shim.min.js"></script>
 	<script src="node_modules/zone.js/dist/zone.js"></script>
